--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.6</version>
+		</dependency>
 
 	</dependencies>
 
