Добавлен вебсервис Products

--- a/pom.xml
+++ b/pom.xml
@@ -54,16 +54,40 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--Парсинг токена авторизации-->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
 
+		<!--Аспекты-->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.9.6</version>
+		</dependency>
+
+		<!--Подключение вебсервисов-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web-services</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+			<version>1.6.2</version>
 		</dependency>
 
 	</dependencies>
@@ -82,6 +106,34 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxb2-maven-plugin</artifactId>
+				<version>2.5.0</version>
+				<executions>
+					<execution>
+						<id>xjc</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<sources>
+						<source>
+							${project.basedir}/src/main/resources/webservices/products.xsd
+						</source>
+					</sources>
+
+					<outputDirectory>
+						${project.basedir}/temp/
+					</outputDirectory>
+					<!--					<clearOutputDir>false</clearOutputDir>-->
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
